--- a/models/Isthmus_Bx_big_bang_model.ipynb
+++ b/models/Isthmus_Bx_big_bang_model.ipynb
@@ -14,7 +14,7 @@
     "\n",
     "However, it is prudent to consider edge cases as well, and the current absence of medium or long-term memory comes with a significant risk. Under the current protocol, sustained high transaction volume (due to rapid adoption or a well-funded spammer) induces a rapid exponential increase in resource requirements (disk space, bandwidth, etc) that would exceed the capacities of the extant Monero infrastructure on the scale of hours\n",
     "\n",
-    "This notebook quantifies the scale of damage in the worst-case-scenarios that could arise from overwhelming adpotion or a deliberate spam attack. The current system (short-term memory only) is compared to two proposed mitigation strategies: a two point long/short-term memory, and an additive limit.\n",
+    "This notebook quantifies the scale of damage in the worst-case-scenarios that could arise from overwhelming adoption or a deliberate spam attack. The current system (short-term memory only) is compared to two proposed mitigation strategies: a two point long/short-term memory, and an additive limit.\n",
     "\n",
     "## Background Reading:\n",
     "\n",
