--- a/models/Isthmus_Bx_big_bang_model.ipynb
+++ b/models/Isthmus_Bx_big_bang_model.ipynb
@@ -6,7 +6,7 @@
    "source": [
     "# Numerical simulation for upper bound on dynamic blocksize expansion\n",
     "\n",
-    "Isthmus - Sept 2018, updated Jan 2019\n",
+    "Mitchell / Isthmus - Sept 2018, updated Jan 2019\n",
     "\n",
     "## Abstract:\n",
     "\n",
